--- a/AttenceProject/Views/SysUsersRoles/Delete.cshtml
+++ b/AttenceProject/Views/SysUsersRoles/Delete.cshtml
@@ -1,96 +1,112 @@
 ﻿@model AttenceProject.Models.SysUsersRole
 
 @{
-    ViewBag.Title = "Delete";
+    Layout = null;
 }
 
-<h2>Delete</h2>
+<!DOCTYPE html>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>SysUsersRole</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserCode)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserDeptID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserDeptID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LoginName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LoginName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PassWord)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PassWord)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserState)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserState)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OverTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OverTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Operator)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Operator)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OpTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OpTime)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Delete</title>
+</head>
+<body>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>SysUsersRole</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.UserName)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.UserName)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.UserCode)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.UserCode)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.UserDeptID)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.UserDeptID)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.LoginName)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.LoginName)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.PassWord)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.PassWord)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.UserState)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.UserState)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.UserRole)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.UserRole)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.OverTime)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.OverTime)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.Operator)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.Operator)
+            </dd>
+    
+            <dt>
+                @Html.DisplayNameFor(model => model.OpTime)
+            </dt>
+    
+            <dd>
+                @Html.DisplayFor(model => model.OpTime)
+            </dd>
+    
+        </dl>
+    
+        @using (Html.BeginForm()) {
+            @Html.AntiForgeryToken()
+    
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
+</body>
+</html>
